# NeuDA

./: .gitignore  .gitmodules  README.md  checkds.bat  extract_mesh.py  list_unregistered_images.bat  pyproject.toml  reconstruct_mesh.py  rename-db.bat  run_pre-neus1.bat  run_pre-neus2.bat  traineval.bat  traineval_wmask.bat  traineval_womask.bat
confs/: neuda_wmask.conf  neuda_womask.conf  texture_opt.conf
dataset/: rays_dataset.py
models/: renderer.py  utils.py
scripts/: init.bat
tools/: check_dataset_counts.py  list_unregistered_images.py  preprocess_cameras.py  preprocess_llff.py  rename_images.py
tools/neus/colmap_preprocess/: colmap_wrapper.py
