[project]
name = "neuda"
version = "0.0.0"
requires-python = "==3.9.*"
dependencies = [
  "imageio==2.15.0",
  "matplotlib==3.3.4",
  "open3d==0.14.1",
  "numpy==1.22.4",
  "opencv_python==4.5.5.64",
  "Pillow==8.4.0",
  "plyfile==1.0.3",
  "pyhocon==0.3.57",
  "PyMCubes==0.1.2",
  "pyopengl==3.1.0",
  "pyopengl-accelerate==3.1.5",
  "pyrender==0.1.45",
  "scikit_image==0.18.3",
  "scikit_learn==0.24.2",
  "scipy==1.13.1",
  "setuptools==68.0.0",
  "tqdm==4.62.3",
  "trimesh==3.10.7",
  "tensorboard==2.14.0",
]

[tool.uv]
environments = ["sys_platform == 'win32'"]
